--- a/自助订餐系统/自助订餐系统.vcxproj.filters
+++ b/自助订餐系统/自助订餐系统.vcxproj.filters
@@ -30,7 +30,7 @@
     <ClCompile Include="seller.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\FUNCTION\MENU.CPP">
+    <ClCompile Include="menu.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
