--- a/自助订餐系统/自助订餐系统.vcxproj
+++ b/自助订餐系统/自助订餐系统.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="address.cpp" />
     <ClCompile Include="admin.cpp" />
     <ClCompile Include="buyer.cpp" />
     <ClCompile Include="menu.cpp" />
@@ -152,6 +153,7 @@
     <Text Include="order.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="address.h" />
     <ClInclude Include="admin.h" />
     <ClInclude Include="buyer.h" />
     <ClInclude Include="menu.h" />
