--- a/自助订餐系统/自助订餐系统.vcxproj.filters
+++ b/自助订餐系统/自助订餐系统.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="menu.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="address.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="order.txt">
@@ -62,6 +65,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="menu.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="address.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
